--- a/src/contents.html
+++ b/src/contents.html
@@ -28,32 +28,34 @@
             </div>
           </div>
           <div class="swiper-slide slide-image1">
-            <div class="swiper-slide__text">
-              <h2>Challenge</h2>
+            <div class="swiper-slide--text reverse">
+              <h2 class="swiper-slide--text__h2 reverse">Challenge</h2>
               <p>저는 끊임없이 도전합니다.</p>
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="swiper-slide__text">
-              <h2>Achieve</h2>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Achieve</h2>
               <p>저는 목표를 달성합니다.</p>
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="swiper-slide__text">
-              <h2>Plan</h2>
+            <div class="swiper-slide--text reverse">
+              <h2 class="swiper-slide--text__h2">Plan</h2>
               <p>저는 미래를 계획합니다.</p>
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="swiper-slide__text">
-              <h2>Underpin</h2>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Underpin</h2>
               <p>저는 배움을 멈추지않습니다.</p>
             </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-container">
+          <div class="swiper-button swiper-button-next">next</div>
+          <div class="swiper-button swiper-button-prev"></div>
+        </div>
       </div>
     </div>
   </section>
