--- a/src/contents.html
+++ b/src/contents.html
@@ -1,15 +1,17 @@
 <main class="main" id="main">
   <section class="main-section">
-    <div class="wrapper">
-      <div class="focus">wellcome</div>
-      <div class="mask">
-        <div class="text">wellcome</div>
+    <div class="wrapper-container">
+      <div class="wrapper">
+        <div class="focus">wellcome</div>
+        <div class="mask">
+          <div class="text">wellcome</div>
+        </div>
       </div>
-    </div>
-    <div class="wrapper wrapper2">
-      <div class="focus focus2">portfolio</div>
-      <div class="mask mask2">
-        <div class="text text2">portfolio</div>
+      <div class="wrapper wrapper2">
+        <div class="focus focus2">portfolio</div>
+        <div class="mask mask2">
+          <div class="text text2">portfolio</div>
+        </div>
       </div>
     </div>
     <div class="scroll-icon"></div>
