--- a/src/contents.html
+++ b/src/contents.html
@@ -14,9 +14,11 @@
         </div>
       </div>
     </div>
-    <div class="scroll-icon"></div>
-    <div class="scroll-down-animation">
-      <span>scroll down</span>
+    <div class="scroll-container">
+      <div class="scroll-icon"></div>
+      <div class="scroll-down-animation">
+        <span>scroll down</span>
+      </div>
     </div>
   </section>
   <section class="slide-section" id="mindset">
@@ -82,41 +84,24 @@
       <div class="accordion">
         <div class="title active">HTML/CSS</div>
         <div class="desc active">
-          웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여
-          마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에
-          대해IE 지원을 고려하며 CSS3의 구조와 속성을 이해하고, 원하는 스타일로
-          코드 구현이 가능합니다. CSS3에서 새롭게 지원하는 속성을 활용해서
-          다양한 CSS배치와 상세 디자인을 할 수 있습니다.
+          웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여 마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에 대해IE 지원을 고려하며 CSS3의 구조와 속성을
+          이해하고, 원하는 스타일로 코드 구현이 가능합니다. CSS3에서 새롭게 지원하는 속성을 활용해서 다양한 CSS배치와 상세 디자인을 할 수 있습니다.
         </div>
         <div class="title">SCSS</div>
-        <div class="desc">
-          SCSS 중첩, 변수, 반복문, 함수를 활용하여 더 효율적이고 CSS 작업을 쉽게
-          해주며 가독성과 재사용성을 높여주어 유지보수가 쉬워질 수 있도록 작업이
-          가능합니다.
-        </div>
+        <div class="desc">SCSS 중첩, 변수, 반복문, 함수를 활용하여 더 효율적이고 CSS 작업을 쉽게 해주며 가독성과 재사용성을 높여주어 유지보수가 쉬워질 수 있도록 작업이 가능합니다.</div>
         <div class="title">JAVASCRIPT</div>
         <div class="desc">
-          필수적인 자바스크립트 활용이 가능하며 조건문, 반복문을 활용하여 간단한
-          연산 및 기능들을 작업할 수 있습니다. 다양한 플러그인을 활용하여
-          자바스크립트의 다양한 기능들을 웹페이지에 적용시킬 수 있습니다.
+          필수적인 자바스크립트 활용이 가능하며 조건문, 반복문을 활용하여 간단한 연산 및 기능들을 작업할 수 있습니다. 다양한 플러그인을 활용하여 자바스크립트의 다양한 기능들을 웹페이지에 적용시킬 수
+          있습니다.
         </div>
         <div class="title">JQUERY</div>
         <div class="desc">
-          웹 퍼블리싱에 반드시 필요한 상호작용(네비게이션, 탭 메뉴, 아코디언,
-          모달창)을 위한 제이쿼리는 플러그인을 사용하지 않고 작업이 가능하며
-          직접 작성한 제이쿼리로 상호작용까지 만들 수 있습니다.
+          웹 퍼블리싱에 반드시 필요한 상호작용(네비게이션, 탭 메뉴, 아코디언, 모달창)을 위한 제이쿼리는 플러그인을 사용하지 않고 작업이 가능하며 직접 작성한 제이쿼리로 상호작용까지 만들 수 있습니다.
         </div>
         <div class="title">PHOTOSHOP/ILLUSTRATOR</div>
-        <div class="desc">
-          포토샵과 일러스트를 능숙하게 이용하여 시안을 제작할 수 있습니다. 웹
-          디자인, 이벤트 디자인, 배너 디자인 등을 위한 두 프로그램을 동시
-          사용하는 것에 능숙합니다.
-        </div>
+        <div class="desc">포토샵과 일러스트를 능숙하게 이용하여 시안을 제작할 수 있습니다. 웹 디자인, 이벤트 디자인, 배너 디자인 등을 위한 두 프로그램을 동시 사용하는 것에 능숙합니다.</div>
         <div class="title">ADOBE XD</div>
-        <div class="desc">
-          XD 툴을 자유롭게 활용하여 웹 시안을 제작할 수 있으며, 편의 기능을
-          활용하여 작업시간을 단축시키고 공유기능을 통해 협업을 할 수 있습니다.
-        </div>
+        <div class="desc">XD 툴을 자유롭게 활용하여 웹 시안을 제작할 수 있으며, 편의 기능을 활용하여 작업시간을 단축시키고 공유기능을 통해 협업을 할 수 있습니다.</div>
       </div>
     </div>
   </section>
