--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
     <link
-    rel="stylesheet"
-    href="https://unpkg.com/swiper/swiper-bundle.min.css"
-  />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/common.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/menu.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" />
@@ -21,7 +21,7 @@
     <!-- header end -->
     <!-- main start -->
     @@include('./contents.html')
-      <!-- main end -->
+    <!-- main end -->
     <!-- footer start -->
     @@include('./footer.html')
     <!-- footer end -->
