--- a/src/contents.html
+++ b/src/contents.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </section>
-  <section class="slide-section" id="mindset">
+  <section class="slide-section descktop" id="mindset">
     <div class="layout-content">
       <div class="swiper mySwiper2">
         <div class="swiper-wrapper">
@@ -60,6 +60,57 @@
           <div class="swiper-button swiper-button-next">next</div>
           <div class="swiper-button swiper-button-prev">prev</div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="slide-section mobile">
+    <div class="layout-content">
+      <div class="swiper mySwiper3">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+            </div>
+            <div class="slide-text">
+              <span>PLAN</span>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="./assets/images/content/slide-img2.jpg" alt="">
+            </div>
+            <div class="slide-text">
+              <span>PLAN</span>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="./assets/images/content/slide-img3.jpg" alt="">
+            </div>
+            <div class="slide-text">
+              <span>PLAN</span>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="./assets/images/content/slide-img4.jpg" alt="">
+            </div>
+            <div class="slide-text">
+              <span>PLAN</span>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-image">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+            </div>
+            <div class="slide-text">
+              <span>PLAN</span>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div> -->
+        <div class="swiper-pagination"></div>
       </div>
     </div>
   </section>
@@ -107,10 +158,10 @@
         <div class="title-rolling">#HTML #CSS/SCSS #jQuery #Javascript</div>
       </div>
       <div class="text-rolling-wrap2">
-        <div class="sub-title-rolling">#HTML #CSS/SCSS #jQuery #Javascript</div>
+        <div class="sub-title-rolling">#HTML&nbsp&nbsp#CSS/SCSS&nbsp&nbsp#jQuery&nbsp&nbsp#Javascript&nbsp&nbsp</div>
       </div>
     </div>
-    <div class="page-skill">
+    <div class="page-skill layout-content">
       <div class="accordion">
         <div class="title active">HTML/CSS</div>
         <div class="desc active">
