--- a/src/menu.html
+++ b/src/menu.html
@@ -1,6 +1,6 @@
 
 <h1 class="welcome-header--logo">S2.m</h1>
-<nav class="welcome-header--menu">
+<nav class="welcome-header--menu descktop">
   <ul class="welcome-header--menu-list">
     <li class="welcome-header--menu-item"><a href="#main">Main</a></li>
     <li class="welcome-header--menu-item"><a href="#mindset">Mindset</a></li>
