--- a/src/contents.html
+++ b/src/contents.html
@@ -117,12 +117,24 @@
   <section class="about-section">
     <div class="layout-content">
       <div class="about-wrap">
-        <div class="about-content about-content-left">
-          <div class="about-left" data-aos="zoom-in-right"></div>
+        <div class="about-content ">
+          <div class="about-content-left" data-aos="zoom-in-right">
+            <div class="about-content-left__profile">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+            </div>
+            <div class="about-content-left__introduction">
+              목표적인 퍼블리셔<br/>
+              심선미입니다.
+            </div>
+          </div>
         </div>
-        <div class="about-content about-content-right">
-          <div class="about-right" data-aos="zoom-in-left">
-            <div>
+        <div class="about-content ">
+          <div class="about-content-right" data-aos="zoom-in-left">
+            <div class="about-right__title">
+              목표적인 퍼블리셔<br/>
+              심선미입니다.
+            </div>
+            <div class="about-right__text">
               <p>
                 저는 배움을 즐거워하고, 늘 새로운 것에 겁내지 않고 도전합니다.
                 그렇기에 많은 경력을 가지고 있으며, 그 경력 안에서 언제나 좋은
