--- a/src/contents.html
+++ b/src/contents.html
@@ -69,7 +69,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
             </div>
             <div class="slide-text">
               <span>PLAN</span>
@@ -77,7 +77,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img2.jpg" alt="">
+              <img src="./assets/images/content/slide-img2.jpg" alt="" />
             </div>
             <div class="slide-text">
               <span>PLAN</span>
@@ -85,7 +85,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img3.jpg" alt="">
+              <img src="./assets/images/content/slide-img3.jpg" alt="" />
             </div>
             <div class="slide-text">
               <span>PLAN</span>
@@ -93,7 +93,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img4.jpg" alt="">
+              <img src="./assets/images/content/slide-img4.jpg" alt="" />
             </div>
             <div class="slide-text">
               <span>PLAN</span>
@@ -101,7 +101,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
             </div>
             <div class="slide-text">
               <span>PLAN</span>
@@ -117,22 +117,27 @@
   <section class="about-section">
     <div class="layout-content">
       <div class="about-wrap">
-        <div class="about-content ">
+        <div class="about-content">
           <div class="about-content-left" data-aos="zoom-in-right">
             <div class="about-content-left__profile">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="">
+              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
             </div>
             <div class="about-content-left__introduction">
-              목표적인 퍼블리셔<br/>
-              심선미입니다.
+              <div class="descktop">
+                안녕하세요! 퍼블리셔가 되기위해<br />
+                발전하고 노력하는 저를 소개합니다.
+              </div>
             </div>
           </div>
         </div>
-        <div class="about-content ">
+        <div class="about-content">
           <div class="about-content-right" data-aos="zoom-in-left">
-            <div class="about-right__title">
-              목표적인 퍼블리셔<br/>
+            <div class="about-right__title descktop">
+              목표적인 퍼블리셔<br />
               심선미입니다.
+            </div>
+            <div class="about-right__title mobile">
+              목표적인 퍼블리셔 심선미입니다.
             </div>
             <div class="about-right__text">
               <p>
@@ -170,7 +175,9 @@
         <div class="title-rolling">#HTML #CSS/SCSS #jQuery #Javascript</div>
       </div>
       <div class="text-rolling-wrap2">
-        <div class="sub-title-rolling">#HTML&nbsp&nbsp#CSS/SCSS&nbsp&nbsp#jQuery&nbsp&nbsp#Javascript&nbsp&nbsp</div>
+        <div class="sub-title-rolling">
+          #HTML&nbsp&nbsp#CSS/SCSS&nbsp&nbsp#jQuery&nbsp&nbsp#Javascript&nbsp&nbsp
+        </div>
       </div>
     </div>
     <div class="page-skill layout-content">
