--- a/src/contents.html
+++ b/src/contents.html
@@ -71,40 +71,40 @@
             <div class="slide-image">
               <img src="./assets/images/content/slide-img1.jpeg" alt="" />
             </div>
-            <div class="slide-text">
-              <span>PLAN</span>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Learn</h2>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
               <img src="./assets/images/content/slide-img2.jpg" alt="" />
             </div>
-            <div class="slide-text">
-              <span>PLAN</span>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Challenge</h2>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
               <img src="./assets/images/content/slide-img3.jpg" alt="" />
             </div>
-            <div class="slide-text">
-              <span>PLAN</span>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Achieve</h2>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
               <img src="./assets/images/content/slide-img4.jpg" alt="" />
             </div>
-            <div class="slide-text">
-              <span>PLAN</span>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Plan</h2>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
+              <img src="./assets/images/content/slide-img5.jpeg" alt="" />
             </div>
-            <div class="slide-text">
-              <span>PLAN</span>
+            <div class="swiper-slide--text">
+              <h2 class="swiper-slide--text__h2">Underpin</h2>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="about-content">
           <div class="about-content-left" data-aos="zoom-in-right">
             <div class="about-content-left__profile">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
+              <img src="./assets/images/content/profile-2.jpeg" alt="" />
             </div>
             <div class="about-content-left__introduction">
               <div class="descktop">
@@ -139,7 +139,7 @@
             <div class="about-right__title mobile">
               목표적인 퍼블리셔 심선미입니다.
             </div>
-            <div class="about-right__text">
+            <div class="about-right__text" data-aos="zoom-in-left">
               <p>
                 저는 배움을 즐거워하고, 늘 새로운 것에 겁내지 않고 도전합니다.
                 그렇기에 많은 경력을 가지고 있으며, 그 경력 안에서 언제나 좋은
@@ -182,7 +182,7 @@
     </div>
     <div class="page-skill layout-content">
       <div class="accordion">
-        <div class="title active">HTML/CSS</div>
+        <div class="title active">HTML/CSS<i class="fa-solid fa-angle-right"></i></div>
         <div class="desc active">
           웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여
           마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에
