--- a/src/contents.html
+++ b/src/contents.html
@@ -69,7 +69,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img1.jpeg" alt="" />
+              <img src="./assets/images/content/slide-img-1-m.png" alt="" />
             </div>
             <div class="swiper-slide--text">
               <h2 class="swiper-slide--text__h2">Learn</h2>
@@ -77,7 +77,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img2.jpg" alt="" />
+              <img src="./assets/images/content/slide-img2-m.png" alt="" />
             </div>
             <div class="swiper-slide--text">
               <h2 class="swiper-slide--text__h2">Challenge</h2>
@@ -85,7 +85,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img3.jpg" alt="" />
+              <img src="./assets/images/content/slide-img3-m.png" alt="" />
             </div>
             <div class="swiper-slide--text">
               <h2 class="swiper-slide--text__h2">Achieve</h2>
@@ -93,7 +93,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img4.jpg" alt="" />
+              <img src="./assets/images/content/slide-img4-m.png" alt="" />
             </div>
             <div class="swiper-slide--text">
               <h2 class="swiper-slide--text__h2">Plan</h2>
@@ -101,7 +101,7 @@
           </div>
           <div class="swiper-slide">
             <div class="slide-image">
-              <img src="./assets/images/content/slide-img5.jpeg" alt="" />
+              <img src="./assets/images/content/slide-img5-m.png" alt="" />
             </div>
             <div class="swiper-slide--text">
               <h2 class="swiper-slide--text__h2">Underpin</h2>
@@ -182,7 +182,9 @@
     </div>
     <div class="page-skill layout-content">
       <div class="accordion">
-        <div class="title active">HTML/CSS<i class="fa-solid fa-angle-right"></i></div>
+        <div class="title active">
+          HTML/CSS<i class="fa-solid fa-angle-right"></i>
+        </div>
         <div class="desc active">
           웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여
           마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에
