--- a/src/contents.html
+++ b/src/contents.html
@@ -136,18 +136,32 @@
               목표적인 퍼블리셔<br />
               심선미입니다.
             </div>
-            <div class="about-right__title mobile">목표적인 퍼블리셔 심선미입니다.</div>
+            <div class="about-right__title mobile">
+              목표적인 퍼블리셔 심선미입니다.
+            </div>
             <div class="about-right__text" data-aos="zoom-in-left">
               <p>
-                저는 배움을 즐거워하고, 늘 새로운 것에 겁내지 않고 도전합니다. 그렇기에 많은 경력을 가지고 있으며, 그 경력 안에서 언제나 좋은 성과를 내어 왔습니다.
+                저는 배움을 즐거워하고, 늘 새로운 것에 겁내지 않고 도전합니다.
+                그렇기에 많은 경력을 가지고 있으며, 그 경력 안에서 언제나 좋은
+                성과를 내어 왔습니다.
                 <br /><br />
-                그러던 중 코딩에 흥미를 갖게 되어 독학을 시작하였고, 혼자 학습하는 것에 대한 한계를 느꼈습니다. 하지만 좋은 기회로 3개월 인턴으로 입사하여 좋은 팀원들과 협업을 경험하면서 한계점을
-                헤쳐나갈 수 있었습니다. 회사 또한 저의 그런 모습들을 좋게 봐주셨었고, 이 기점으로 인턴(아르바이트)에서 초급 개발자로 재계약을 할 수 있는 기회를 얻게 되었습니다.
+                그러던 중 코딩에 흥미를 갖게 되어 독학을 시작하였고,
+                혼자 학습하는 것에 대한 한계를 느꼈습니다. 하지만 좋은 기회로
+                3개월 인턴으로 입사하여 좋은 팀원들과 협업을 경험하면서 한계점을
+                헤쳐나갈 수 있었습니다. 회사 또한 저의 그런 모습들을 좋게
+                봐주셨었고, 이 기점으로 인턴(아르바이트)에서 초급
+                개발자로 재계약을 할 수 있는 기회를 얻게 되었습니다.
                 <br /><br />
-                이 경험을 통하여 알게 된 바, 업무에 책임감을 가지고 끝까지 처리해 내는 것 또한 저의 큰 장점이라 생각합니다. 이러한 장점을 가지고 어디서든 큰 기량을 펼칠 수 있을 거라 확신합니다.
+                이 경험을 통하여 알게 된 바, 업무에 책임감을 가지고
+                끝까지 처리해 내는 것 또한 저의 큰 장점이라 생각합니다. 이러한
+                장점을 가지고 어디서든 큰 기량을 펼칠 수 있을 거라 확신합니다.
                 <br /><br />
-                저는 책임감과 끈기를 가진 도전적인 사람입니다. 지금도 저는 탄탄한 기본기를 바탕으로 새로운 언어에 대한 빠른 변화에 빠른 대응을 할 수 있는 목표적인 퍼블리셔가 되고 있습니다. 저의 부족한
-                부분도 빠르게 보완하여 실전에 투입되었을 때 저의 많은 역량을 보여드리고 싶습니다. 기회를 주신다면 귀사의 발전에 반드시 기여하고 나아가겠습니다.
+                저는 책임감과 끈기를 가진 도전적인 사람입니다. 지금도 저는
+                탄탄한 기본기를 바탕으로 새로운 언어에 대한 빠른 변화에 빠른
+                대응을 할 수 있는 목표적인 퍼블리셔가 되고 있습니다. 저의 부족한
+                부분도 빠르게 보완하여 실전에 투입되었을 때 저의 많은 역량을
+                보여드리고 싶습니다. 기회를 주신다면 귀사의 발전에 반드시
+                기여하고 나아가겠습니다.
               </p>
             </div>
           </div>
@@ -161,31 +175,52 @@
         <div class="title-rolling">#HTML #CSS/SCSS #jQuery #Javascript</div>
       </div>
       <div class="text-rolling-wrap2">
-        <div class="sub-title-rolling">#HTML&nbsp&nbsp#CSS/SCSS&nbsp&nbsp#jQuery&nbsp&nbsp#Javascript&nbsp&nbsp</div>
+        <div class="sub-title-rolling">
+          #HTML&nbsp&nbsp#CSS/SCSS&nbsp&nbsp#jQuery&nbsp&nbsp#Javascript&nbsp&nbsp
+        </div>
       </div>
     </div>
     <div class="page-skill layout-content">
       <div class="accordion">
-        <div class="title active">HTML/CSS<i class="fa-solid fa-angle-right"></i></div>
+        <div class="title active">
+          HTML/CSS<i class="fa-solid fa-angle-right"></i>
+        </div>
         <div class="desc active">
-          웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여 마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에 대해IE 지원을 고려하며 CSS3의 구조와 속성을
-          이해하고, 원하는 스타일로 코드 구현이 가능합니다. CSS3에서 새롭게 지원하는 속성을 활용해서 다양한 CSS배치와 상세 디자인을 할 수 있습니다.
+          웹 표준과 웹 접근성을 준수하는 HTML 구조설계로 시맨틱 태그를 사용하여
+          마크업을 작성합니다. 레이아웃 설계를 꼼꼼히 잘하고, 크로스브라우징에
+          대해IE 지원을 고려하며 CSS3의 구조와 속성을 이해하고, 원하는 스타일로
+          코드 구현이 가능합니다. CSS3에서 새롭게 지원하는 속성을 활용해서
+          다양한 CSS배치와 상세 디자인을 할 수 있습니다.
         </div>
         <div class="title">SCSS</div>
-        <div class="desc">SCSS 중첩, 변수, 반복문, 함수를 활용하여 더 효율적이고 CSS 작업을 쉽게 해주며 가독성과 재사용성을 높여주어 유지보수가 쉬워질 수 있도록 작업이 가능합니다.</div>
+        <div class="desc">
+          SCSS 중첩, 변수, 반복문, 함수를 활용하여 더 효율적이고 CSS 작업을 쉽게
+          해주며 가독성과 재사용성을 높여주어 유지보수가 쉬워질 수 있도록 작업이
+          가능합니다.
+        </div>
         <div class="title">JAVASCRIPT</div>
         <div class="desc">
-          필수적인 자바스크립트 활용이 가능하며 조건문, 반복문을 활용하여 간단한 연산 및 기능들을 작업할 수 있습니다. 다양한 플러그인을 활용하여 자바스크립트의 다양한 기능들을 웹페이지에 적용시킬 수
-          있습니다.
+          필수적인 자바스크립트 활용이 가능하며 조건문, 반복문을 활용하여 간단한
+          연산 및 기능들을 작업할 수 있습니다. 다양한 플러그인을 활용하여
+          자바스크립트의 다양한 기능들을 웹페이지에 적용시킬 수 있습니다.
         </div>
         <div class="title">JQUERY</div>
         <div class="desc">
-          웹 퍼블리싱에 반드시 필요한 상호작용(네비게이션, 탭 메뉴, 아코디언, 모달창)을 위한 제이쿼리는 플러그인을 사용하지 않고 작업이 가능하며 직접 작성한 제이쿼리로 상호작용까지 만들 수 있습니다.
+          웹 퍼블리싱에 반드시 필요한 상호작용(네비게이션, 탭 메뉴, 아코디언,
+          모달창)을 위한 제이쿼리는 플러그인을 사용하지 않고 작업이 가능하며
+          직접 작성한 제이쿼리로 상호작용까지 만들 수 있습니다.
         </div>
         <div class="title">PHOTOSHOP/ILLUSTRATOR</div>
-        <div class="desc">포토샵과 일러스트를 능숙하게 이용하여 시안을 제작할 수 있습니다. 웹 디자인, 이벤트 디자인, 배너 디자인 등을 위한 두 프로그램을 동시 사용하는 것에 능숙합니다.</div>
+        <div class="desc">
+          포토샵과 일러스트를 능숙하게 이용하여 시안을 제작할 수 있습니다. 웹
+          디자인, 이벤트 디자인, 배너 디자인 등을 위한 두 프로그램을 동시
+          사용하는 것에 능숙합니다.
+        </div>
         <div class="title">ADOBE XD</div>
-        <div class="desc">XD 툴을 자유롭게 활용하여 웹 시안을 제작할 수 있으며, 편의 기능을 활용하여 작업시간을 단축시키고 공유기능을 통해 협업을 할 수 있습니다.</div>
+        <div class="desc">
+          XD 툴을 자유롭게 활용하여 웹 시안을 제작할 수 있으며, 편의 기능을
+          활용하여 작업시간을 단축시키고 공유기능을 통해 협업을 할 수 있습니다.
+        </div>
       </div>
     </div>
   </section>
