--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/f01502651a.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-..." crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/common.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/menu.css" type="text/css" />
@@ -18,7 +25,7 @@
   </head>
   <body>
     <!-- header start -->
-    <header class="welcome-header ">@@include('./menu.html')</header>
+    <header class="welcome-header">@@include('./menu.html')</header>
     <!-- header end -->
     <!-- main start -->
     @@include('./contents.html')
