인터렉션 추가

--- a/src/contents.html
+++ b/src/contents.html
@@ -186,8 +186,37 @@
       </div>
     </div>
   </section>
+  <section class="image-gallery">
+    <div class="scroll-img">
+      <div class="layout-content">
+        <div class="image-area bg-box">
+          <div class="image-block">
+            <img src="https://via.placeholder.com/640x420 " alt="" />
+          </div>
+          <div class="image-block">
+            <img src="https://via.placeholder.com/420x600 " alt="" />
+          </div>
+          <div class="image-block">
+            <img src="https://via.placeholder.com/720x480 " alt="" />
+          </div>
+          <div class="image-block">
+            <img src="https://via.placeholder.com/420x540 " alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="portfolio">
-    <div class="layout-content"></div>
+    <div class="layout-content">
+      <div class="portfolio-text-wrap">
+        <div class="portfolio-title">portfolio입니다.</div>
+      </div>
+      <div class="portfolio-images-wrap">
+        <ul>
+          <li></li>
+        </ul>
+      </div>
+    </div>
   </section>
 </main>
 <!-- Swiper JS -->
@@ -195,3 +224,5 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
