--- a/src/contents.html
+++ b/src/contents.html
@@ -209,16 +209,18 @@
   <section class="work-section">
     <div class="layout-content">
       <div class="work-content-title">
-        my portfolio
+        <a href="#">portfolio</a>
       </div>
      <div class="work-content">
       <div class="work-content-left">
         <img src="./assets/images/content/6297147.jpg" alt="">
       </div>
       <div class="work-content-right" data-aos="zoom-in-right">
-        <p class="work_subtit"><a href="#">MARSHALL</a></p>
-        <p class="work_keyword"><mark>#반응형 #웹표준</mark></p>
-        <p class="txt">오직 HTML과 CSS만을 이용하여 구현한 사이트입니다. JQUERY없이 checkbox속성과 animation속성을 이용하여 메인메뉴를 구성하였고, 모든 스타일은 SCSS를 사용하여 유지보수가 용이하도록 구현하였습니다.</p>
+        <p class="work_subtit"><a href="#"></a>Marshall</p>
+        <p class="work_keyword">#반응형 #웹표준</p>
+        <p class="txt">html/css/jquery를 사용하여 기존 marshall사이트를 리디자인 하였습니다.<br/>
+        플러그인사용으로 더욱 동적인 사이트를 만들었고, 사용자의 편의성을 고려하여 반응형 디자인으로 제작하였습니다.
+        </p>
         <span class="visit_btn"><a href="http://HYEMEMprofile.dothome.co.kr/" title="프로필 버전2 바로가기" target="_blank">VIEW SITE</a></span>
       </div>
      </div> 
