--- a/src/contents.html
+++ b/src/contents.html
@@ -216,7 +216,7 @@
         <img src="./assets/images/content/6297147.jpg" alt="">
       </div>
       <div class="work-content-right" data-aos="zoom-in-right">
-        <p class="work_subtit"><a href="#"></a>Marshall</p>
+        <p class="work_subtit"><a href="#">Marshall</a></p>
         <p class="work_keyword">#반응형 #웹표준</p>
         <p class="txt">html/css/jquery를 사용하여 기존 marshall사이트를 리디자인 하였습니다.<br/>
         플러그인사용으로 더욱 동적인 사이트를 만들었고, 사용자의 편의성을 고려하여 반응형 디자인으로 제작하였습니다.
