--- a/src/contents.html
+++ b/src/contents.html
@@ -225,16 +225,16 @@
             <a href="#">gallery</a>
           </div>
           <div class="image-block">
-            <img src="https://via.placeholder.com/640x420 " alt="" />
+            <img src="./assets/images/content/gallery-img1.jpg" alt="" />
           </div>
           <div class="image-block">
-            <img src="https://via.placeholder.com/420x600 " alt="" />
+            <img src="./assets/images/content/gallery-img2.jpg" alt="" />
           </div>
           <div class="image-block">
-            <img src="https://via.placeholder.com/720x480 " alt="" />
+            <img src="./assets/images/content/gallery-img3.jpg" alt="" />
           </div>
           <div class="image-block">
-            <img src="https://via.placeholder.com/420x540 " alt="" />
+            <img src="./assets/images/content/gallery-img4.jpg" alt="" />
           </div>
         </div>
       </div>
