--- a/src/contents.html
+++ b/src/contents.html
@@ -247,19 +247,21 @@
       </div>
       
       <div class="work-content">
-        <div class="work-content-left">
+        <div class="work-content-project">  
+          <div class="work-content-project__img">
             <img src="./assets/images/content/work-img1.png" alt="" />
-        </div>
-        <div class="work-content-right" data-aos="zoom-in-right">
-          <p class="work_subtit"><a href="#">Marshall</a></p>
-
-          <p class="txt">
-            html/css/jquery를 사용하여 기존 marshall사이트를 리디자인 하였습니다.<br />
-            플러그인사용으로 더욱 동적인 사이트를 만들었고, 사용자의 편의성을 고려하여 반응형 디자인으로 제작하였습니다.
-          </p>
-          <!-- <span class="visit_btn"><a href="http://HYEMEMprofile.dothome.co.kr/" title="프로필 버전2 바로가기" target="_blank">VIEW SITE</a></span>
-           -->
-           <button class="btn-1"><span><a href="https://strong-mousse-190cc8.netlify.app"target="_blank">Hover Me</a></span>
+          </div>  
+          <div class="work-content-project__text">
+            <p class="work_subtit"><a href="#">Marshall</a></p>S
+    
+            <p class="txt">
+                html/css/jquery를 사용하여 기존 marshall사이트를 리디자인 하였습니다.<br />
+                플러그인사용으로 더욱 동적인 사이트를 만들었고, 사용자의 편의성을 고려하여 반응형 디자인으로 제작하였습니다.
+            </p>
+              <!-- <span class="visit_btn"><a href="http://HYEMEMprofile.dothome.co.kr/" title="프로필 버전2 바로가기" target="_blank">VIEW SITE</a></span>
+               -->
+              <button class="btn-1"><span><a href="https://strong-mousse-190cc8.netlify.app"target="_blank">Hover Me</a></span>
+          </div>
         </div>
       </div>
     </div>
